Added information about the rules of the gameю

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
 </head>
 
 <body>
+    <div class="info">
+        <button onclick="Info()"><img src="assets/img/icons/ico-info.png" alt=""></button>
+        <h1>BlackJack</h1>
+        <p>Цель игры: собрать карты суммой очков больше, чем у дилера, но не больше, чем 21. Дилер берёт карты первым.</p>
+        <p>Значения очков каждой карты: от двойки до десятки - от 2 до 10 соответственно, у туза - или 11, у короля, дамы и вальта - 10.</p>
+    </div>
     <div class="wrapper">
         <div class="name-game">
             <div class="container">
@@ -48,9 +54,9 @@
                 <div>Дмитрий Шевчук 2021</div>
                 <nav class="footer__social-network">
                     <ul class="footer__nav-ul">
-                        <li><a href="#"><img src="assets/img/icons/ico-telegram.png" alt=""></a></li>
-                        <li><a href="#"><img src="assets/img/icons/ico-discord.png" alt=""></a></li>
-                        <li><a href="#"><img src="assets/img/icons/ico-github.png" alt=""></a></li>
+                        <li><a href="https://t.me/Chapka12" target="_blank"><img src="assets/img/icons/ico-telegram.png" alt=""></a></li>
+                        <li><a href="https://discord.com/channels/Chapka#5219" target="_blank"><img src="assets/img/icons/ico-discord.png" alt=""></a></li>
+                        <li><a href="https://github.com/CHaPPiFeeD" target="_blank"><img src="assets/img/icons/ico-github.png" alt=""></a></li>
                     </ul>
                 </nav>
             </div>
