Corrected game mechanics. The bot draws cards during the game.

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
 <body>
     <div class="info">
-        <button onclick="Info()"><img src="assets/img/icons/ico-info.png" alt=""></button>
+        <button onclick="info()"><img src="assets/img/icons/ico-info.png" alt=""></button>
         <h1>BlackJack</h1>
-        <p>Цель игры: собрать карты суммой очков больше, чем у дилера, но не больше, чем 21. Дилер берёт карты первым.</p>
+        <p>Цель игры: собрать карты суммой очков больше, чем у дилера, но не больше, чем 21. Карты берутся поочереди. Вы берёте карту первым(-ой).</p>
         <p>Значения очков каждой карты: от двойки до десятки - от 2 до 10 соответственно, у туза - 11, у короля, дамы и вальта - 10.</p>
     </div>
     <div class="wrapper">
@@ -33,23 +33,23 @@
         <div class="height">
             <div class="container">
                 <div class="start-game">
-                    <button class="start-game_button" onclick="StartGame()">Начать игру</button>
+                    <button class="start-game_button" onclick="startGame()">Начать игру</button>
                 </div>
                 <div class="result-massage">
                     <p></p>
                     <input type="button" class="result-massage_restart-button" value="Начать заново"
-                        onclick="StartGame()">
+                        onclick="startGame()">
                 </div>
             </div>
         </div>
         <div class="interface">
             <div class="container">
                 <div class="interface__buttons">
-                    <input type="button" class="interface__buttons_button" value="Поднять карту" onclick="PlusPoints()">
+                    <input type="button" class="interface__buttons_button" value="Поднять карту" onclick="plusPoints(), plusBotPoints()">
                     <div class="interface__buttons_div" title="Ваши очки">
                         <p id="sum-of-points"></p>
                     </div>
-                    <input type="button" class="interface__buttons_button" value="Спасовать" onclick="EndGame()">
+                    <input type="button" class="interface__buttons_button" value="Спасовать" onclick="endGame()">
                 </div>
             </div>
         </div>
