Fixed text error.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="info">
         <button onclick="info()"><img src="assets/img/icons/ico-info.png" alt=""></button>
         <h1>BlackJack</h1>
-        <p>Цель игры: собрать карты суммой очков больше, чем у дилера, но не больше, чем 21. Карты берутся поочереди. Вы берёте карту первым(-ой).</p>
+        <p>Цель игры: собрать карты суммой очков больше, чем у противника, но не больше, чем 21. Карты берутся поочереди. Вы берёте карту первым(-ой).</p>
         <p>Значения очков каждой карты: от двойки до десятки - от 2 до 10 соответственно, у туза - 11, у короля, дамы и вальта - 10.</p>
     </div>
     <div class="wrapper">
